--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,9 @@
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
 
 <% else %>
-
-  <%= link_to('Register', new_user_registration_path)  %>
-  <%= link_to('Login', new_user_session_path)  %>  
-
+  <ul>
+    <li><%= link_to('Register', new_user_registration_path)  %></li>
+    <li><%= link_to('Login', new_user_session_path)  %></li>  
+    <li><%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %></li>
+  </ul>
 <% end %>
