--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,14 @@
   <head>
     <title>RPServices</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'home/index' %>
   </head>
 
   <body>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
