--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,13 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= render 'home/index' %>
+    <%= render 'home/navbar' %>
   </head>
 
   <body>
   <div class="container">
     <%= yield %>
+    <%= render "home/footer" %>
   </div>
   </body>
 </html>
