Deleted files due to typos. Created new files that corrected typos.

--- a/app/views/piro_first_calls/new.html.erb
+++ b/app/views/piro_first_calls/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.text_field :hospital_city %>
   <%= f.text_field :place_of_birth %>
   <%= f.date_field :date_of_birth %>
-  <%= f.check_box :martial_status %>
+  <%= f.text_field :martial_status %>
   <%= f.number_field :social_security %>
   <%= f.text_field :last_occupation %>
   <%= f.text_field :education_level %>
