--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -5,11 +5,15 @@
     <% if user_signed_in? %>
       <nav>
         <ul class="nav navbar-nav navbar-right" id="navbarlist">
-          <li><!--%= link_to 'Funeral Info', piro_first_call_path(@firstcall) %--></li>
-          <li><!--%= link_to 'Disposition', authorize_cremation_and_disposition_path(@disposition) %--></li>
-          <li><!--%= link_to 'Cremation Permit', cremation_permit_path(@cremation) %--></li>
-          <li><!--%= link_to 'Intentions', designation_of_intention_path(@intention) %--></li>
-          <li><!--%= link_to 'Written Statement', written_statement_path(@written) %--></li>
+          <% if params[:piro_first_call] || params[:authorize_cremation_and_disposition] || params[:cremation_permit_path] || params[:designation_of_intention] || params[:written_statement] %>
+            <li><%= link_to 'Funeral Info', piro_first_call_path(@firstcall) %></li>
+            <li><%= link_to 'Disposition', authorize_cremation_and_disposition_path(@disposition) %></li>
+            <li><%= link_to 'Cremation Permit', cremation_permit_path(@cremation) %></li>
+            <li><%= link_to 'Intentions', designation_of_intention_path(@intention) %></li>
+            <li><%= link_to 'Written Statement', written_statement_path(@written) %></li>
+          <% else %>
+
+          <% end %>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
         </ul>        
     <% else %>
