--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -5,6 +5,7 @@
     <% if user_signed_in? %>
       <nav>
         <ul class="nav navbar-nav navbar-right" id="navbarlist">
+          <li><%= link_to 'Funeral Info', piro_first_calls_path(@firstcall) %></li>
           <% if params[:piro_first_call].present? && params[:authorize_cremation_and_disposition].present? && params[:cremation_permit_path].present? && params[:designation_of_intention].present? && params[:written_statement].present? %>
             <li><%= link_to 'Funeral Info', piro_first_call_path(@firstcall) %></li>
             <li><%= link_to 'Disposition', authorize_cremation_and_disposition_path(@disposition) %></li>
@@ -12,7 +13,7 @@
             <li><%= link_to 'Intentions', designation_of_intention_path(@intention) %></li>
             <li><%= link_to 'Written Statement', written_statement_path(@written) %></li>
           <% else %>
-            <li><%= link_to 'Funeral Info', piro_first_call_path(@firstcall) %></li>
+           
           <% end %>
           <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
         </ul>        
