--- a/app/views/authorize_cremation_and_dispositions/new.html.erb
+++ b/app/views/authorize_cremation_and_dispositions/new.html.erb
@@ -1,3 +1,5 @@
+<h1>Authorize Cremation</h1>
+
 <%= bootstrap_form_for(@disposition) do |f| %>  
   <%= f.date_field :date %>
   <%= f.number_field :case_number %>
