--- a/app/views/cremation_permits/new.html.erb
+++ b/app/views/cremation_permits/new.html.erb
@@ -1,3 +1,5 @@
+<h1>Cremation Permits</h1>
+
 <%= bootstrap_form_for(@cremation) do |f| %>
   <%= f.text_field :next_of_kin %>
   <%= f.text_field :address %>
